--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mediaqueries.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
 </head>
 <body>
 
@@ -27,23 +26,7 @@
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
 
-  <section class="home" id="home">
-    <div class="img">
-      <img src="./assets/startup.png">
-    </div>
-    <div class="content">
-      <h3>We are the Progpals! Welcome!</h3>
-      <p>Lorem Ipsum is simply dummy text 
-        of the printing and typesetting industry.
-         Lorem Ipsum has been the industry's 
-         standard dummy text ever since the 
-         1500s,</p>
-         <a href="#" class="btn"> contact us <span class="fas fa-chevron-right"></span></a>
-    </div>
-  </section>
-
-
-
+  <section class="about" id="about"></section>
 
   <script src="script.js"></script>
 </body>
