--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
 
   <section class="home" id="home">
-    <div class="img">
+    <div class="image">
       <img src="./assets/startup.png">
     </div>
     <div class="content">
