--- a/services.html
+++ b/services.html
@@ -17,10 +17,11 @@
       <a href="./index.html">Home</a>
       <a href="./services.html">Services</a>
       <a href="./about.html">About</a>
-      <a href="#members">Members</a>
-      <a href="#book">Book</a>
-      <a href="#review">Review</a>
-      <a href="#blogs">BLogs</a>
+      <a href="./members.html">Members</a>
+      <a href="./book.html">Book</a>
+      <a href="./review.html">Review</a>
+      <a href="./blogs.html">BLogs</a>
+      <a href="./events.html">Events</a>
     </nav>
 
     <div id="menu-btn" class="fas fa-bars"></div>
