--- a/about.html
+++ b/about.html
@@ -37,7 +37,8 @@
 
         <div class="content">
           <h3>We are Progpals</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>
+            Greetings at Progpals! We're not just a startup; we're your partners in transforming ideas into technological marvels. Our passion for groundbreaking code fuels our journey to rewrite the possibilities of tomorrow. With Progpals, you're not just joining a team; you're becoming part of a collective effort to shape the future. Together, let's embark on this exciting adventure of innovation and coding excellence. Welcome to Progpals, where the journey is as thrilling as the destination, and your ideas are the catalysts for the extraordinary. Join us, and let's co-create a future where technology knows no bounds!</p>
           <a href="#" class="btn"> Learn More <span class="fas fa-chevron-right"></span></a>
         </div>
 
