--- a/blogs.html
+++ b/blogs.html
@@ -27,6 +27,80 @@
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
 
+  <section class="blogs" id="blogs">
+  
+    <div class="box-container">
+
+        <div class="box">
+            <div class="image">
+                <img src="assets/blogs1.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href=""><i class="fas fa-calendar"> 18th December, 2023</i></a>
+                    <a href=""><i class="fas fa-user"> by admin</i></a>
+                </div>
+                <h3>blog title goes here</h3>
+                <p>
+                    Lorem ipsum dolor sit amet 
+                    consectetur adipisicing elit.
+                     Quis aperiam necessitatibus fuga
+                      laborum itaque id beatae natus consectetur!
+                       Dolores, odio. Itaque, quasi eveniet. Natus
+                        optio commodi nobis saepe obcaecati necessitatibus!
+                </p>
+                <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="assets/blogs1.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href=""><i class="fas fa-calendar"> 18th December, 2023</i></a>
+                    <a href=""><i class="fas fa-user"> by admin</i></a>
+                </div>
+                <h3>blog title goes here</h3>
+                <p>
+                    Lorem ipsum dolor sit amet 
+                    consectetur adipisicing elit.
+                     Quis aperiam necessitatibus fuga
+                      laborum itaque id beatae natus consectetur!
+                       Dolores, odio. Itaque, quasi eveniet. Natus
+                        optio commodi nobis saepe obcaecati necessitatibus!
+                </p>
+                <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="assets/blogs1.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href=""><i class="fas fa-calendar"> 18th December, 2023</i></a>
+                    <a href=""><i class="fas fa-user"> by admin</i></a>
+                </div>
+                <h3>blog title goes here</h3>
+                <p>
+                    Lorem ipsum dolor sit amet 
+                    consectetur adipisicing elit.
+                     Quis aperiam necessitatibus fuga
+                      laborum itaque id beatae natus consectetur!
+                       Dolores, odio. Itaque, quasi eveniet. Natus
+                        optio commodi nobis saepe obcaecati necessitatibus!
+                </p>
+                <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+            </div>
+        </div>
+    </div>
+   
+   
+  </section>
+
 
   <script src="script.js"></script>
 </body>
