--- a/review.html
+++ b/review.html
@@ -28,6 +28,57 @@
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
 
+  <section class="review" id="review">
+    <div class="box-container review-box-container">
+
+        <div class="box">
+            <img src="assets/review1.jpg">
+            <h3>John Doe</h3>
+            <div class="stars">
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i>
+            </div>
+            <p class="text">
+              "Absolutely impressed with the innovative solutions provided by this rising programming startup! Their team's expertise is evident in the precision and effectiveness of the custom software they developed for our unique business challenges. Looking forward to continued success with them!"
+            </p>
+        </div>
+
+        <div class="box">
+          <img src="assets/review1.jpg">
+          <h3>John Doe</h3>
+          <div class="stars">
+           <i class="fas fa-star"></i>
+           <i class="fas fa-star"></i>
+           <i class="fas fa-star"></i>
+           <i class="fas fa-star"></i>
+           <i class="fas fa-star"></i>
+          </div>
+          <p class="text">
+            "Incredible experience with this up-and-coming programming startup! Their tailored software solutions showcased a perfect blend of creativity and functionality. Remarkably effective in addressing our unique business needs. Excited for more collaborations!"
+          </p>
+      </div>
+
+      <div class="box">
+        <img src="assets/review1.jpg" alt="">
+        <h3>Jane Doe</h3>
+        <div class="stars">
+         <i class="fas fa-star"></i>
+         <i class="fas fa-star"></i>
+         <i class="fas fa-star"></i>
+         <i class="fas fa-star"></i>
+         <i class="fas fa-star"></i>
+        </div>
+        <p class="text">
+          This programming startup exceeded our expectations! Their team delivered a custom software solution with unmatched precision and effectiveness, tackling our specific challenges seamlessly. Thrilled with the results and eager for future projects with them!"
+        </p>
+    </div>
+    
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
