--- a/services.html
+++ b/services.html
@@ -33,42 +33,42 @@
       <div class="box">
         <i class="fa fa-address-book"></i>
         <h3>Custom Software Development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nam eligendi tempore sapiente quo quia, quam nesciunt eveniet dicta architecto qui optio, quidem ullam totam assumenda doloribus vel! Nulla, animi!</p>
+        <p>Developing bespoke software solutions for your distinctive challenges, ensuring precision, effectiveness, and optimal outcomes tailored to your specific needs.</p>
         <a href="#" class="btn">learn more<span class="fas fa-chevron-right"></span> </a>
       </div>
 
       <div class="box">
         <i class="fa fa-mobile"></i>
         <h3>Mobile App Development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nam eligendi tempore sapiente quo quia, quam nesciunt eveniet dicta architecto qui optio, quidem ullam totam assumenda doloribus vel! Nulla, animi!</p>
+        <p>Crafting mobile apps to match your vision, ensuring a smooth user experience on iOS and Android platforms with precision and care.</p>
         <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span> </a>
       </div>
 
       <div class="box">
         <i class="fa fa-desktop"></i>
         <h3>Web Development Services</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nam eligendi tempore sapiente quo quia, quam nesciunt eveniet dicta architecto qui optio, quidem ullam totam assumenda doloribus vel! Nulla, animi!</p>
+        <p>Designing dynamic websites that seamlessly blend style with functionality, captivating your audience for a compelling online presence.</p>
         <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span> </a>
       </div>
 
       <div class="box">
         <i class="fa fa-lock"></i>
         <h3>Cybersecurity Consulting</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nam eligendi tempore sapiente quo quia, quam nesciunt eveniet dicta architecto qui optio, quidem ullam totam assumenda doloribus vel! Nulla, animi!</p>
+        <p>Guiding you with expertise to strengthen your digital defenses, implementing robust measures to safeguard against evolving threats and protect sensitive data.</p>
         <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span> </a>
       </div>
 
       <div class="box">
         <i class="fa fa-link"></i>
         <h3>Blockchain Development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nam eligendi tempore sapiente quo quia, quam nesciunt eveniet dicta architecto qui optio, quidem ullam totam assumenda doloribus vel! Nulla, animi!</p>
+        <p>Using blockchain technology to build secure, decentralized solutions, improving transparency and efficiency across industries.</p>
         <a href="#" class="btn">learn more<span class="fas fa-chevron-right"></span> </a>
       </div>
 
       <div class="box">
         <i class="fa fa-user"></i>
         <h3>AI and Machine Learning Consulting</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nam eligendi tempore sapiente quo quia, quam nesciunt eveniet dicta architecto qui optio, quidem ullam totam assumenda doloribus vel! Nulla, animi!</p>
+        <p>Offering expertise to seamlessly integrate AI and machine learning, unlocking possibilities and enhancing decision-making in your systems.</p>
         <a href="#" class="btn">learn more<span class="fas fa-chevron-right"></span> </a>
       </div>
     </div>
