--- a/book.html
+++ b/book.html
@@ -27,6 +27,25 @@
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
 
+  <section class="book" id="book">
+
+    <div class="row">
+
+      <div class="image">
+        <img src="assets/startup.png" alt="">
+      </div>
+
+      <form action="">
+        <h3>Book Here: </h3>
+        <input type="text" placeholder="your name" class="box">
+        <input type="number" placeholder="your number" class="box">
+        <input type="email" placeholder="your email" class="box">
+        <input type="date"  class="box">
+        <input type="submit"  value="book now" class="btn">
+      </form>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
