--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
       <img src="./assets/startup.png">
     </div>
     <div class="content">
-      <h3>We are the Progpals! Welcome!</h3>
-      <p>Lorem Ipsum is simply dummy text 
-        of the printing and typesetting industry.
-         Lorem Ipsum has been the industry's 
-         standard dummy text ever since the 
-         1500s,</p>
+      <h3>Come and Join Us</h3>
+      <p>Welcome to Progpals! Where we merge coding mastery with creativity to craft advanced solutions. Join us in discovering the thrilling possibilities in the future of coding! 🚀</p>
          <a href="#" class="btn"> contact us <span class="fas fa-chevron-right"></span></a>
     </div>
   </section>
