--- a/blogs.html
+++ b/blogs.html
@@ -29,25 +29,20 @@
 
   <section class="blogs" id="blogs">
   
-    <div class="box-container">
+    <div class="box-container blogs-box-container">
 
         <div class="box">
             <div class="image">
-                <img src="assets/blogs1.jpg" alt="">
+                <img src="assets/blog-1.jpg">
             </div>
             <div class="content">
                 <div class="icon">
-                    <a href=""><i class="fas fa-calendar"> 18th December, 2023</i></a>
+                    <a href=""><i class="fas fa-calendar"> June 17, 2023</i></a>
                     <a href=""><i class="fas fa-user"> by admin</i></a>
                 </div>
-                <h3>blog title goes here</h3>
+                <h3>Hackatons</h3>
                 <p>
-                    Lorem ipsum dolor sit amet 
-                    consectetur adipisicing elit.
-                     Quis aperiam necessitatibus fuga
-                      laborum itaque id beatae natus consectetur!
-                       Dolores, odio. Itaque, quasi eveniet. Natus
-                        optio commodi nobis saepe obcaecati necessitatibus!
+                    At our dynamic startup, we're diving into the world of hackathons – those electrifying events that fuel collaboration and innovation. In our latest blog, we unveil the strategies that make these coding extravaganzas more than just gatherings; they're the heartbeat of our culture, driving us towards new heights of creativity and teamwork
                 </p>
                 <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
             </div>
@@ -55,21 +50,16 @@
 
         <div class="box">
             <div class="image">
-                <img src="assets/blogs1.jpg" alt="">
+                <img src="assets/blogs-2.jpg">
             </div>
             <div class="content">
                 <div class="icon">
-                    <a href=""><i class="fas fa-calendar"> 18th December, 2023</i></a>
+                    <a href=""><i class="fas fa-calendar"> September 5, 2023</i></a>
                     <a href=""><i class="fas fa-user"> by admin</i></a>
                 </div>
-                <h3>blog title goes here</h3>
+                <h3>Tech Talks</h3>
                 <p>
-                    Lorem ipsum dolor sit amet 
-                    consectetur adipisicing elit.
-                     Quis aperiam necessitatibus fuga
-                      laborum itaque id beatae natus consectetur!
-                       Dolores, odio. Itaque, quasi eveniet. Natus
-                        optio commodi nobis saepe obcaecati necessitatibus!
+                    "Welcome to our startup's dynamic Tech Talk Series! This blog unveils the art of organizing sessions where industry experts share insights, innovations, and experiences. Join us in exploring how these talks become a beacon of inspiration, fostering continuous learning and collaboration within our innovative startup culture." 
                 </p>
                 <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
             </div>
@@ -77,21 +67,16 @@
 
         <div class="box">
             <div class="image">
-                <img src="assets/blogs1.jpg" alt="">
+                <img src="assets/blog-3.jpg">
             </div>
             <div class="content">
                 <div class="icon">
-                    <a href=""><i class="fas fa-calendar"> 18th December, 2023</i></a>
+                    <a href=""><i class="fas fa-calendar"> November 22, 2023</i></a>
                     <a href=""><i class="fas fa-user"> by admin</i></a>
                 </div>
-                <h3>blog title goes here</h3>
+                <h3>Workshop and Training</h3>
                 <p>
-                    Lorem ipsum dolor sit amet 
-                    consectetur adipisicing elit.
-                     Quis aperiam necessitatibus fuga
-                      laborum itaque id beatae natus consectetur!
-                       Dolores, odio. Itaque, quasi eveniet. Natus
-                        optio commodi nobis saepe obcaecati necessitatibus!
+                    Dive into knowledge enrichment at our startup with Workshop Training. Explore the transformative power of crafting engaging, skill-building sessions. Discover how Workshop Training becomes a cornerstone for talent honing, fostering growth, and driving innovation in our dynamic culture. Join us as we maximize potential and shape the future.
                 </p>
                 <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
             </div>
