--- a/review.html
+++ b/review.html
@@ -32,8 +32,8 @@
     <div class="box-container review-box-container">
 
         <div class="box">
-            <img src="assets/review1.jpg">
-            <h3>John Doe</h3>
+            <img src="assets/review-pic-1.jpg">
+            <h3>Mark Joseph Ante</h3>
             <div class="stars">
              <i class="fas fa-star"></i>
              <i class="fas fa-star"></i>
@@ -47,8 +47,8 @@
         </div>
 
         <div class="box">
-          <img src="assets/review1.jpg">
-          <h3>John Doe</h3>
+          <img src="assets/review-pic-2.jpg">
+          <h3>Emmanuel Espeña</h3>
           <div class="stars">
            <i class="fas fa-star"></i>
            <i class="fas fa-star"></i>
