--- a/blogs.html
+++ b/blogs.html
@@ -20,7 +20,7 @@
       <a href="./members.html">Members</a>
       <a href="./book.html">Book</a>
       <a href="./review.html">Review</a>
-      <a href="./blogs.html">BLogs</a>
+      <a href="./blogs.html">Blogs</a>
       <a href="./events.html">Events</a>
     </nav>
 
@@ -76,7 +76,7 @@
                 </div>
                 <h3>Workshop and Training</h3>
                 <p>
-                    Dive into knowledge enrichment at our startup with Workshop Training. Explore the transformative power of crafting engaging, skill-building sessions. Discover how Workshop Training becomes a cornerstone for talent honing, fostering growth, and driving innovation in our dynamic culture. Join us as we maximize potential and shape the future.
+                    Discover skill-enhancing workshops at our startup, cultivating both personal and professional growth. Immerse yourself in transformative sessions designed to unlock your full potential and actively contribute to shaping a future of innovation. Join us on this journey of continuous improvement and achievement.
                 </p>
                 <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
             </div>
