--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progpals</title>
+  <title>Document</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mediaqueries.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -26,26 +26,6 @@
 
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
-
-  <section class="book" id="book">
-
-    <div class="row">
-
-      <div class="image">
-        <img src="assets/startup.png">
-      </div>
-
-      <form action="">
-        <h3>Book Here: </h3>
-        <input type="text" placeholder="your name" class="box">
-        <input type="number" placeholder="your number" class="box">
-        <input type="email" placeholder="your email" class="box">
-        <input type="date"  class="box">
-        <input type="submit"  value="book now" class="btn">
-      </form>
-    </div>
-  </section>
-
-  <script src="script.js"></script>
+  
 </body>
 </html>
