--- a/review.html
+++ b/review.html
@@ -20,7 +20,7 @@
       <a href="./members.html">Members</a>
       <a href="./book.html">Book</a>
       <a href="./review.html">Review</a>
-      <a href="./blogs.html">BLogs</a>
+      <a href="./blogs.html">Blogs</a>
       <a href="./events.html">Events</a>
       
     </nav>
@@ -40,6 +40,7 @@
              <i class="fas fa-star"></i>
              <i class="fas fa-star"></i>
              <i class="fas fa-star"></i>
+             
             </div>
             <p class="text">
               "Absolutely impressed with the innovative solutions provided by this rising programming startup! Their team's expertise is evident in the precision and effectiveness of the custom software they developed for our unique business challenges. Looking forward to continued success with them!"
@@ -62,8 +63,8 @@
       </div>
 
       <div class="box">
-        <img src="assets/review1.jpg" alt="">
-        <h3>Jane Doe</h3>
+        <img src="assets/review-pic-3.jpg">
+        <h3>Renan Bisle</h3>
         <div class="stars">
          <i class="fas fa-star"></i>
          <i class="fas fa-star"></i>
