--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="./members.html">Members</a>
       <a href="./book.html">Book</a>
       <a href="./review.html">Review</a>
-      <a href="./blogs.html">BLogs</a>
+      <a href="./blogs.html">Blogs</a>
       <a href="./events.html">Events</a>
     </nav>
 
@@ -35,7 +35,7 @@
     <div class="content">
       <h3>Come and Join Us</h3>
       <p>Welcome to Progpals! Where we merge coding mastery with creativity to craft advanced solutions. Join us in discovering the thrilling possibilities in the future of coding! 🚀</p>
-         <a href="#" class="btn"> contact us <span class="fas fa-chevron-right"></span></a>
+         <a href="./contact.html" class="btn"> contact us <span class="fas fa-chevron-right"></span></a>
     </div>
   </section>
 
