--- a/members.html
+++ b/members.html
@@ -20,7 +20,7 @@
       <a href="./members.html">Members</a>
       <a href="./book.html">Book</a>
       <a href="./review.html">Review</a>
-      <a href="./blogs.html">BLogs</a>
+      <a href="./blogs.html">Blogs</a>
       <a href="./events.html">Events</a>
     </nav>
 
