--- a/members.html
+++ b/members.html
@@ -27,9 +27,50 @@
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
 
-  <section class="members" id="members">
+  <div class="members" id="members">
+    <div class="box-container">
+        
+        <div class="box">
+            <img src="assets/members-3.jpg">
+            <h3>James Ricarte</h3>
+            <span>Backend Developer</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fa-brands fa-x-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="fa-brands fa-github"></a>
+            </div>
+        </div>
 
-  </section>
+        <div class="box">
+            <img src="assets/members-1.jpg">
+            <h3>Cedric Naño</h3>
+            <span>Frontend Developer</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fa-brands fa-x-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="fa-brands fa-github"></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="assets/members-2.jpg">
+            <h3>Charles Alamares</h3>
+            <span>UI/UX Designer/Frontend Developer</span>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fa-brands fa-x-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="fa-brands fa-github"></a>
+            </div>
+        </div>
+    </div>
+  </div>
+  
   
   <script src="script.js"></script>
 </body>
