--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,25 @@
 
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
-  
+
+  <section id="contact">
+    <div class="image">
+      <img src="./assets/startup.png">
+    </div>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <img src="./assets/gmail-logo.png" alt="Email logo" class="contact-icon icon">
+        <p><a href="https://mail.google.com/mail/u/0/#inbox">lawrenzuio@gmail.com</a></p>
+      </div>
+
+      <div class="contact-info-container">
+        <img src="./assets/ig-icon.png" alt="Ig icon" class="icon contact-icon">
+        <p><a href="https://www.instagram.com/">itsurboywrenzo</a></p>
+
+      </div>
+    </div>
+
+  </section>
+ 
 </body>
 </html>
