--- a/events.html
+++ b/events.html
@@ -27,52 +27,63 @@
     <div id="menu-btn" class="fas fa-bars"></div>
   </header>
 
-  <section class="services" id="services">
-    
-    <div class="box-container">
-      <div class="box">
-        <i class="fa fa-address-book"></i>
-        <h3>Custom Software Development</h3>
-        <p>Developing bespoke software solutions for your distinctive challenges, ensuring precision, effectiveness, and optimal outcomes tailored to your specific needs.</p>
-        <a href="#" class="btn">learn more<span class="fas fa-chevron-right"></span> </a>
-      </div>
+  <section class="blogs" id="blogs">
+  
+    <div class="box-container blogs-box-container">
 
-      <div class="box">
-        <i class="fa fa-mobile"></i>
-        <h3>Mobile App Development</h3>
-        <p>Crafting mobile apps to match your vision, ensuring a smooth user experience on iOS and Android platforms with precision and care.</p>
-        <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span> </a>
-      </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/events-1.jpg">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href=""><i class="fas fa-calendar"> June 28, 2024</i></a>
+                    <a href=""><i class="fas fa-user">???</i></a>
+                </div>
+                <h3>Coming Soon</h3>
+                <p>
+                  Get ready for a groundbreaking experience with , set to launch in a year. We're redefining the IT industry through innovative solutions and a customer-centric approach. Follow us on Github, X, Instagram, and Facebook for exclusive pre-launch offers and stay updated on our journey to reshape the future of our Startup. Join the movement at www.progpals.com 
+                </p>
+                <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+            </div>
+        </div>
 
-      <div class="box">
-        <i class="fa fa-desktop"></i>
-        <h3>Web Development Services</h3>
-        <p>Designing dynamic websites that seamlessly blend style with functionality, captivating your audience for a compelling online presence.</p>
-        <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span> </a>
-      </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/events-1.jpg">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href=""><i class="fas fa-calendar">July 18, 2024</i></a>
+                    <a href=""><i class="fas fa-user">???</i></a>
+                </div>
+                <h3>Coming Soon</h3>
+                <p>
+                    Get ready for a groundbreaking experience with , set to launch in a year. We're redefining the IT industry through innovative solutions and a customer-centric approach. Follow us on Github, X, Instagram, and Facebook for exclusive pre-launch offers and stay updated on our journey to reshape the future of our Startup. Join the movement at www.progpals.com 
+                </p>
+                <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+            </div>
+        </div>
 
-      <div class="box">
-        <i class="fa fa-lock"></i>
-        <h3>Cybersecurity Consulting</h3>
-        <p>Guiding you with expertise to strengthen your digital defenses, implementing robust measures to safeguard against evolving threats and protect sensitive data.</p>
-        <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span> </a>
-      </div>
-
-      <div class="box">
-        <i class="fa fa-link"></i>
-        <h3>Blockchain Development</h3>
-        <p>Using blockchain technology to build secure, decentralized solutions, improving transparency and efficiency across industries.</p>
-        <a href="#" class="btn">learn more<span class="fas fa-chevron-right"></span> </a>
-      </div>
-
-      <div class="box">
-        <i class="fa fa-user"></i>
-        <h3>AI and Machine Learning Consulting</h3>
-        <p>Offering expertise to seamlessly integrate AI and machine learning, unlocking possibilities and enhancing decision-making in your systems.</p>
-        <a href="#" class="btn">learn more<span class="fas fa-chevron-right"></span> </a>
-      </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/events-1.jpg">
+            </div>
+            <div class="content">
+                <div class="icon">
+                    <a href=""><i class="fas fa-calendar"> October 25, 2024</i></a>
+                    <a href=""><i class="fas fa-user">???</i></a>
+                </div>
+                <h3>Coming Soon</h3>
+                <p>
+                  Get ready for a groundbreaking experience with , set to launch in a year. We're redefining the IT industry through innovative solutions and a customer-centric approach. Follow us on Github, X, Instagram, and Facebook for exclusive pre-launch offers and stay updated on our journey to reshape the future of our Startup. Join the movement at www.progpals.com 
+                </p>
+                <a href="#" class="btn">learn more <span class="fas fa-chevron-right"></span></a>
+            </div>
+        </div>
     </div>
-
+   
+   
   </section>
   
   <SCRipt src="script.js"></SCRipt>
